# sortrs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
benches/: sortrs.rs
src/: lib.rs
tests/: sortrs.rs
