[package]

name = "sortrs"
version = "0.0.5"
authors = ["Cameron Hart <cam@bitshifter.net.nz>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bitshifter/sortrs"
homepage = "https://github.com/bitshifter/sortrs"
readme = "README.md"
keywords = ["sort", "sorting"]
description = """
An introspective sort implementation.
"""

[dependencies]
num = "0.1"

[dev-dependencies]
rand = "0.3"
